fixed css of projects so they don't cut off in mobile

--- a/src/components/pages/Projects/Projects.css
+++ b/src/components/pages/Projects/Projects.css
@@ -10,8 +10,13 @@
 }
 
 .projectsRow{
-  height: 40% !important;
+  margin: 25px !important;
   
+}
+
+.projectCol{
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 
